--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ tagline: ""
 description: "Powered by <a href=\"http://micro.blog/\">Micro.blog</a>."
 credits: "Powered by <a href=\"http://micro.blog/\">Micro.blog</a>."
 baseurl: ""
-url: "http://jeff.micro.blog"
+url: "http://micro.jeffvautin.com"
 markdown: "kramdown"
 username: "jeff"
 permalink: "/:year/:month/:day/:title.html"
@@ -56,3 +56,7 @@ full_name: "Jeff Vautin"
 bio: ""
 twitter_username: ""
 github_username: ""
+instagram_username: ""
+paginate: 20
+paginate_path: "/page/:num/"
+timezone: ""
