Mirroring from Micro.blog.

--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ relative_permalinks: false
 author: "Jeff Vautin"
 name: "Jeff Vautin"
 gravatar_hash: "004ce6443ff2c0ec37adb5933fd43cda"
-avatar: "http://www.gravatar.com/avatar/004ce6443ff2c0ec37adb5933fd43cda?s=160"
+avatar: "https://www.gravatar.com/avatar/004ce6443ff2c0ec37adb5933fd43cda?s=160"
 full_name: "Jeff Vautin"
 bio: ""
 twitter_username: ""
