--- a/_config.yml
+++ b/_config.yml
@@ -40,8 +40,8 @@ defaults:
 
 title: "Jeff Vautin"
 tagline: ""
-description: "Powered by <a href=\"http://micro.blog/\">Micro.blog</a>."
-credits: "Powered by <a href=\"http://micro.blog/\">Micro.blog</a>."
+description: "Follow <a href=\"https://micro.blog/jeff\">@jeff on Micro.blog</a>."
+credits: "Follow <a href=\"https://micro.blog/jeff\">@jeff on Micro.blog</a>."
 baseurl: ""
 url: "http://micro.jeffvautin.com"
 markdown: "kramdown"
