Mirroring from Micro.blog.

--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,11 @@
-highlighter: "rouge"
-# - markdown: "kramdown"
+email: your-email@domain.com
 
-defaults:
-    -
-        scope:
-            path: "" # empty string for all files
-            type: pages
-        values:
-            layout: default
-    -
-        scope:
-            path: "" # empty string for all files
-            type: posts
-        values:
-            layout: post
-
-plugins:
-  - jekyll-sitemap
+exclude:
+  - Gemfile
+  - Gemfile.lock
+sass:
+  sass_dir: assets/stylesheets
+  style: :compressed
 
 title: "Jeff Vautin"
 tagline: ""
