--- a/_config.yml
+++ b/_config.yml
@@ -26,3 +26,4 @@ site_id: "299"
 gems: ["jekyll-paginate"]
 itunes_category: "Society & Culture"
 itunes_subcategory: "Personal Journals"
+itunes_author: "Jeff Vautin"
